--- a/css/style.css
+++ b/css/style.css
@@ -19,24 +19,29 @@ body{
 /******* section Home ********/
 #Home{
   background-image: url(../img/payments-banner-graphic.png);
-  height: 85vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: auto;
+  padding-bottom: 25vh;
+
 }
 .navbar{/*pour enlever le margin de base de bootstrap*/
   margin-bottom: 0;
 }
-.navbar-left li img{
-  height: 7vh;
-  padding-top: 1.8vh;
-  margin-left: 1vh;
-}
-.navbar-left li p{
-  line-height: 9vh;
-  color: white;
-  padding-left: 1vw;
-  font-size: 1.25em;
-  letter-spacing: 0.3em;
-}
 
+.Icon-Nav{
+  display:flex;
+  flex-direction:row;
+}
+.Icon-Img{
+  width: 1.5em;
+  height: auto;
+}
+.Icon-Text{
+  margin-top: 0.25em;
+  margin-left: 0.5em;
+  color: white;
+}
 .navbar-right a{
   color: white;
   font-size: 0.9em;
@@ -45,10 +50,7 @@ body{
   color:black;
 }
 .icon-bar{
-  background-color: grey;
-}
-.navbar-toggle{
-
+  background-color: White;
 }
 
 .bidule h1{
@@ -127,24 +129,24 @@ body{
 }
 .bck-ACH p{
   color: white;
-  padding-top: 3vh;
-  padding-bottom: 3vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   margin-bottom: 0;
+  font-size: x-large;
 }
 
 /******* section img-et-Text ********/
-.Dcale{
-  transform: translateY(0vh 5vh);
-}
 .textocenter {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  border-top: 1px solid #DDD;
 }
 .textocenter1 {
   display: flex;
   align-items: center;
   flex-wrap: wrap-reverse;
+  border-top: 1px solid #DDD;
 }
 .fnddulimage1{
   background-color: #7CD5EF;
@@ -154,7 +156,7 @@ body{
 .fnddulimage2{
   background-color: #8080BE;
   overflow-y: hidden;
-  height: 78vh;
+  height:78vh;
 }
 .img-arrondie{
   border-radius: 15px;
@@ -162,18 +164,75 @@ body{
 .Dcale{
   transform: translateY(11vh);
 }
+.Dcale p{
+  color:#AAAAAA;
+}
+
+@media screen and (max-width: 400px) {
+  .Dcale{
+    transform: translateY(5vh);
+    padding-left: 2vh;
+    padding-right: 2vh;
+
+  }
+  .fnddulimage1{
+    height: 50vh;
+  }
+  .fnddulimage2{
+    height: 50vh;
+  }
+  .textocenter {
+    border-top: 1px solid #DDD;
+  }
+  .textocenter1 {
+    border-top: 1px solid #DDD;
+  }
+}
 
 /**********ZoneReady***********/
-
+#ZoneReady{
+  border-top: 1px solid #DDD;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+}
+#ZoneReady button{
+  background-color: #00AD85;
+  color: white;
+  padding: 1.8vh;
+}
+#ZoneReady p{
+  font-size: 1.7em;
+  color: #4D4D4D;
+}
 
 /**********footer***********/
 .colFoot{
   background-color: #242629;
   color: #939291;
 }
-footer ul{
-  list-style: none;
-}
+/*footer ul{
+list-style: none;
+}*/
 .nespacefoot{
   margin-top: 8vh;
 }
+.footText{
+  font-size: 1em;
+}
+.toutpetitpetit{
+  font-size: 1em;
+}
+.nespacefoot2{
+  margin-top: 8vh;
+  margin-bottom:8vh;
+}
+@media screen and (max-width: 400px) {
+  .footText{
+    font-size: 0.8em;
+  }
+  .toutpetitpetit{
+    font-size: 0.7em;
+  }
+  footer .text-left p b{
+    font-size: 0.8em;
+  }
